section-ten/grade-submission-portal/grade-submission-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: grade-submission-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grade-submission
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: grade-submission-portal
    spec:   # ✅ THIS IS MISSING IN YOUR FILE
      containers:
        - name: grade-submission-portal
          image: rslim087/kubernetes-course-grade-submission-portal
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet: 
              path: /readyz
              port: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 5001
